--- a/files/gitweb.conf
+++ b/files/gitweb.conf
@@ -1,5 +1,5 @@
 # path to git projects (<project>.git)
-$projectroot = "/var/www/git";
+$projectroot = "/var/cache/git";
 
 # directory to use for temp files
 $git_temp = "/tmp";
